--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 discord = "^1.7.3"
 youtube_dl = "^2021.6.6"
+PyNaCl = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 
