--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,11 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 discord = "^1.7.3"
-youtube_dl = "^2021.6.6"
 PyNaCl = "^1.4.0"
 Flask = "^2.0.2"
 tasks = "^2.8.0"
+youtube_dl = "^2021.6.6"
+dismusic = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 
