--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pip==22.1.2
 youtube_dl==2021.12.17
-discord.py==1.7.3
+discord.py[voice]==1.7.3
 discord_components==2.1.2
 ffmpeg==1.4
-PyNaCl==1.5.0
+PyNaCl==1.4.0
